2004-11-07 22:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added code to [GormClassManager 
	loadCustomClasses:] to ignore any entry in the data.classes file
	which is not a dictionary.
	
2004-11-07 22:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added code to [GormClassManager saveToFile:]
	and [GormClassManager loadCustomClasses:] to handle adding (and
	subsequently removing before processing) of a comment which warns
	users not to manually edit the file.
	
2004-11-07 22:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: [GormClassManager removeAction:]
	added code to check for a custom class.
	
2004-11-07 14:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added entry for NSObject.
	* Gorm.m: Removed check for adding attribute to class so that
	"category" actions can be added to existing AppKit classes.
	* GormClassEditor.m: Removed check for custom in outlineView:
	addActionToClass: for category method support.
	* GormClassInspector.m: Changed "isCustom" to isEditable in 
	table delegate method.
	* GormClassManager.[hm]: Changed grouping of methods.  Also
	made changes to correct various problems found while 
	implementing category support.    Fixes Bug#10934.
	* GormDocument.m: [GormDocument remove:] added check for 
	custom class or for category to allow remove.
	* GormLib/IBConnectors.m: Added default implementation of
	nibInstantiate.
	
2004-11-04 01:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected a memory leak in 
	loadFromFile:.
	* GormClassManager.h: Added FSF/GPL header and organized
	the methods in the header according to function.
	
2004-11-03 22:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: modified addNewActionToClassNamed: and
	addNewOutletToClassNamed: so that the initial names for outlets
	and actions are newOutet1, newOutlet2, and similar for actions